--- a/day1_activity/index.html
+++ b/day1_activity/index.html
@@ -42,6 +42,7 @@
       <div class="ball"></div>
     </section>
   </main>
+  <script src="simpleBall.js"></script>
   <script src="location.js"></script>
   <script src="border.js"></script>
   <script src="ball.js"></script>
